--- a/vignettes/data-quality-qa.html
+++ b/vignettes/data-quality-qa.html
@@ -889,19 +889,25 @@ secondary (UNGR_SEC) counts</li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] ggplot2_4.0.1      tidyr_1.3.2        dplyr_1.2.0        caschooldata_0.1.0
+## [1] tidyr_1.3.2        ggplot2_4.0.1      dplyr_1.2.0        caschooldata_0.1.0
+## [5] testthat_3.3.1     devtools_2.4.6     usethis_3.2.1     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] gtable_0.3.6       jsonlite_2.0.0     compiler_4.5.0     tidyselect_1.2.1  
-##  [5] jquerylib_0.1.4    scales_1.4.0       yaml_2.3.12        fastmap_1.2.0     
-##  [9] R6_2.6.1           labeling_0.4.3     generics_0.1.4     knitr_1.51        
-## [13] tibble_3.3.1       bslib_0.9.0        pillar_1.11.1      RColorBrewer_1.1-3
-## [17] rlang_1.1.7        utf8_1.2.6         cachem_1.1.0       xfun_0.55         
-## [21] sass_0.4.10        S7_0.2.1           otel_0.2.0         cli_3.6.5         
-## [25] withr_3.0.2        magrittr_2.0.4     digest_0.6.39      grid_4.5.0        
-## [29] rappdirs_0.3.4     lifecycle_1.0.5    vctrs_0.7.1        evaluate_1.0.5    
-## [33] glue_1.8.0         farver_2.1.2       codetools_0.2-20   rmarkdown_2.30    
-## [37] purrr_1.2.1        tools_4.5.0        pkgconfig_2.0.3    htmltools_0.5.9</code></pre>
+##  [1] rappdirs_0.3.4     sass_0.4.10        utf8_1.2.6         generics_0.1.4    
+##  [5] stringi_1.8.7      hms_1.1.4          digest_0.6.39      magrittr_2.0.4    
+##  [9] grid_4.5.0         RColorBrewer_1.1-3 evaluate_1.0.5     pkgload_1.4.1     
+## [13] fastmap_1.2.0      cellranger_1.1.0   rprojroot_2.1.1    jsonlite_2.0.0    
+## [17] pkgbuild_1.4.8     sessioninfo_1.2.3  brio_1.1.5         purrr_1.2.1       
+## [21] scales_1.4.0       codetools_0.2-20   jquerylib_0.1.4    cli_3.6.5         
+## [25] rlang_1.1.7        ellipsis_0.3.2     remotes_2.5.0      withr_3.0.2       
+## [29] cachem_1.1.0       yaml_2.3.12        otel_0.2.0         tools_4.5.0       
+## [33] tzdb_0.5.0         memoise_2.0.1      vctrs_0.7.1        R6_2.6.1          
+## [37] lifecycle_1.0.5    stringr_1.6.0      fs_1.6.6           pkgconfig_2.0.3   
+## [41] desc_1.4.3         gtable_0.3.6       pillar_1.11.1      bslib_0.9.0       
+## [45] glue_1.8.0         xfun_0.55          tibble_3.3.1       tidyselect_1.2.1  
+## [49] rstudioapi_0.17.1  knitr_1.51         farver_2.1.2       htmltools_0.5.9   
+## [53] labeling_0.4.3     rmarkdown_2.30     readr_2.2.0        compiler_4.5.0    
+## [57] S7_0.2.1           readxl_1.4.5</code></pre>
 </div>
 
 
